# InSitu-Vis-Tutorial2022

./: PizDaint_Instructions.2023.txt  PizDaint_Instructions.txt  README.md
AscentIntro/: CompileExamples.txt  README.md
Examples/: pvReadBlueprintRootFile.00.py
Examples/DoubleGyre/C++/: CMakeLists.txt  CompileOnLaptop.sh  CompileWithSpack.sh  RunWithAscent.ipynb  cleanup.sh  double_gyre.cxx  double_gyre.h  double_gyre_ascent.cxx  double_gyre_ascent.h  double_gyre_catalyst.cxx  double_gyre_catalyst.h  main.cxx  pvVerifyVorticityAscent.py
Examples/DoubleGyre/Python/: RunOnLaptop.sh  Run_Catalyst_OnLaptop.sh  cleanup.sh  double_gyre_ascent.ipynb  double_gyre_ascent.py  double_gyre_catalyst.py  histogram_gyre.txt  histogram_gyre_normalized.txt  pvDoubleGyre.py
Examples/DoubleGyrePython/: RunOnLaptop.sh  double_gyre_ascent.py
Examples/DoubleGyrePython/.ipynb_checkpoints/: double_gyre_ascent-checkpoint.ipynb
Examples/HeatDiffusion/C++/: AscentAdaptor.h  CMakeLists.txt  CatalystAdaptor.h  HeatDiffusionDriver.cxx  HowToRun.txt  Jacobi.bov  Jacobi.xmf  JacobiDriver.cxx  With-Ascent-InSitu-Vis.ipynb  With-Catalyst-InSitu-Vis.ipynb  Without-InSitu-Vis.ipynb  ascent_session.yaml  catalyst_state.py  cleanup.sh  foo.cxx  plot_actions.yaml  run_ascent.sh  solvers.cxx  solvers.h
Examples/HeatDiffusion/C++/buildAscent/: CMakeCache.txt  Jacobi.bov  Jacobi.xmf  Makefile  ascent_session.yaml  cmake_install.cmake  mesh.cycle_001000.root  mesh.cycle_002000.root
Examples/HeatDiffusion/C++/buildAscent/mesh.cycle_001000/: domain_000000.hdf5  domain_000001.hdf5  domain_000002.hdf5  domain_000003.hdf5
Examples/HeatDiffusion/C++/buildAscent/mesh.cycle_002000/: domain_000000.hdf5  domain_000001.hdf5  domain_000002.hdf5  domain_000003.hdf5
Examples/HeatDiffusion/C++/buildCatalyst/: CMakeCache.txt  Makefile  cmake_install.cmake
Examples/HeatDiffusion/InTransit/: HowToRun-InTransit.sh  adios2.xml  diffusion-catalyst-fides.json  fides-sst-reader.cpp  heat_diffusion_insitu_serial.py  pvReadFides.py
Examples/HeatDiffusion/Python/: CMakeLists.txt  HowToRun.txt  README.md  ReadBluePrintDataSaveImage.ipynb  RunAscentLocal.txt  RunCatalystLocal.txt  RunOnLaptop.sh  cleanup.sh  clip_with_temperature.yaml  fides-sst-reader.cpp  heat_diffusion_insitu_Ascent.ipynb  heat_diffusion_insitu_Ascent.py  heat_diffusion_insitu_Ascent_parallel.ipynb  heat_diffusion_insitu_Catalyst.ipynb  heat_diffusion_insitu_Catalyst.py  heat_diffusion_insitu_Catalyst_parallel.ipynb  heat_diffusion_insitu_parallel.py  heat_diffusion_insitu_parallel_Ascent.py  heat_diffusion_insitu_parallel_Catalyst.py  heat_diffusion_insitu_serial.py  isocontours_temperature.yaml  jacobi_insitu_Ascent.ipynb  jacobi_insitu_Ascent.py  jacobi_insitu_Catalyst.py  jacobi_insitu_parallel.py  jacobi_insitu_parallel_Ascent.py  jacobi_insitu_parallel_Catalyst.py  jacobi_insitu_serial.ipynb  jacobi_insitu_serial.py  rectilinear.yaml  run_parallel_ascent.sh  run_parallel_catalyst.sh  structured.yaml  temperature_gradient.yaml  testBlueprint.py  testing.sh  uniform.yaml  unstructured.yaml
Examples/HeatDiffusion/Python/.ipynb_checkpoints/: jacobi_insitu_Ascent-checkpoint.ipynb  jacobi_insitu_Ascent-checkpoint.py
Examples/HeatDiffusion/Python/diffusion.bp/: data.0  md.0  md.idx  profiling.json
Examples/JacobiC++/: AscentAdaptor.h  CMakeLists.txt  CatalystAdaptor.h  HowToRun.txt  JacobiDriver.cxx  With-Ascent-InSitu-Vis.ipynb  With-Catalyst-InSitu-Vis.ipynb  Without-InSitu-Vis.ipynb  ascent_actions.yaml  catalyst_mesh.py  catalyst_state.py  cleanup.sh  paraview-vis.py  plot_actions.yaml  run_ascent.sh  run_catalyst.sh  solvers.cxx  solvers.h
Examples/JacobiPython/: README.md  adios2.xml  diffusion-catalyst-fides.json  jacobi_insitu_Ascent.ipynb  jacobi_insitu_Ascent.py  jacobi_insitu_parallel.py  jacobi_insitu_parallel_Ascent.py  jacobi_insitu_serial.ipynb  jacobi_insitu_serial.py  pvReadFides.py
Examples/LULESH/: ASCENT_HowtoCompile_and_Run_PizDaint.txt  CATALYST_HowtoCompile_and_Run_PizDaint.txt  CMakeLists.txt  catalyst.py  lulesh-ascent.h  lulesh-catalyst.h  lulesh-init.cc  lulesh.h  run_lulesh_ascent.sh  run_lulesh_catalyst.sh  script2.py
Examples/LULESH/Ascent/: Run_LULESH+Ascent.ipynb  ascent_actions.yaml  run_lulesh_Ascent.sh
Examples/LULESH/Ascent/ParaViewBridge/: Run_LULESH+Ascent+ParaView.ipynb  paraview-pressure-threshold.py  paraview-vis.py  run_lulesh_Ascent+ParaView.sh
Examples/LULESH/Catalyst/: Run_LULESH+Catalyst.ipynb  catalyst.py  run_lulesh_catalyst.sh
Examples/SPH-EXA/: README.md
Examples/SPH-EXA/Ascent/: README.txt  follow_a_shock_front_query+filter.yaml  rendering_point_field_constant_radius.yaml  rendering_point_field_variable_radius.yaml  rendering_point_mag_velocity.yaml  trigger_HDF5_output.yaml
Examples/SPH-EXA/Catalyst/: README.txt  catalyst_helloworld.py  run_catalyst_sedov.sh
